fixed nav bar alignment on medium screen as recommended by TSE

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,160 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-
 body {
-  background: #f4f5f6;
-  font-family: "Roboto Condensed", sans-serif;
+  color: #333;
+  font-size: 13px;
+  line-height: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-  max-width: 1300px;
-  margin: auto;
+.navbar {
+  background-color: #f72210;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-nav {
+  align-items: flex-end;
+  background-color: #f72210;
+  display: flex;
+  flex-direction: row;
+  height: 95px;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  padding: 20px 10px 15px;
+  width: 100%;
+  z-index: 1;
+}
+
+.date {
+  color: #fff;
+  font: 16px/34px "Roboto Condensed", sans-serif;
+  margin-right: 20px;
+}
+
+.top-logo {
+  cursor: pointer;
+  width: 40%;
+}
+
+.top-logo svg {
+  fill: #fff;
+  width: 88%;
+}
+
+.sign-in span {
+  color: #fff;
+  cursor: pointer;
+  font: 18px/34px "Roboto Condensed", sans-serif;
+  margin-right: 20px;
+}
+
+.sign-in button {
+  border: 0;
   background: #fff;
+  color: #f72210;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 17px;
+  padding: 5px 5px;
+  text-align: center;
+}
+
+.sign-in i {
+  color: #f72210;
+  font-size: 17px;
+}
+
+.bottom-nav {
+  align-items: center;
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+ul {
+  padding: 10px;
+}
+
+.bottom-nav ul {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Roboto Condensed", sans-serif;
+  line-height: 24px;
+  margin: 0;
+  width: 90%;
+}
+
+.social-icons li {
+  font-size: 25px;
+  line-height: 20px;
+}
+
+.social li {
+  list-style: none;
+}
+
+.footer-navigation li {
+  list-style: none;
+  float: left;
+}
+
+.bottom-nav ul li {
+  border-right: 1px solid #d9d9d9;
+  display: inline-flex;
+  justify-content: center;
+  padding: 0.3rem;
+}
+
+.bottom-nav ul li:last-child {
+  border-right: 0;
+}
+
+.search-bar {
+  width: 10%;
+}
+
+.search-bar input {
+  border: 0;
+  font-size: 15px;
+  width: 50px;
+}
+
+.search-bar i {
+  font-size: 20px;
 }
 
 a {
   text-decoration: none;
   color: #161616;
+}
+
+.article-post a {
+  text-decoration: none;
+}
+
+.social li a {
+  font-size: 1.3rem;
+  padding-right: 1rem;
+  color: #666;
+}
+
+.footer-navigation li a {
+  padding: 0 0.8rem;
+  border-right: 1px solid #e5e5e5;
+  color: #666;
+  font-family: sans-serif;
+  font-size: 0.9rem;
+}
+
+.bottom-nav ul li a {
+  color: #000;
+  text-align: center;
+}
+
+.bottom-nav ul li a:hover {
+  color: #f72210;
+  text-decoration: none;
 }
 
 .red-highlight {
@@ -38,79 +174,6 @@ a {
   font-weight: 700;
 }
 
-.article-post a {
-  text-decoration: none;
-}
-
-.social li {
-  list-style: none;
-}
-
-.footer-navigation li {
-  list-style: none;
-  float: left;
-}
-
-.social li a {
-  font-size: 1.3rem;
-  padding-right: 1rem;
-  color: #666;
-}
-
-.footer-navigation li a {
-  padding: 0 0.8rem;
-  border-right: 1px solid #e5e5e5;
-  color: #666;
-  font-family: sans-serif;
-  font-size: 0.9rem;
-}
-
-.navbar ul li {
-  list-style-type: none;
-}
-
-.container .nav-item a {
-  font-weight: 700;
-  color: #000;
-  font-size: 1.25rem;
-  margin-bottom: 0;
-  padding: 0 1rem;
-  border-right: 1px solid #e5e5e5;
-}
-
-.logo-area {
-  background: #f72210;
-}
-
-.current-date {
-  font-weight: 100;
-  color: #fff;
-}
-
-.signin-btn {
-  background: transparent;
-  color: #fff;
-  font-weight: bold;
-}
-
-.subscribe-btn {
-  background: #fff;
-  border-radius: 0;
-  padding: 0.3rem 1.2rem;
-  font-weight: bold;
-  color: #f72210;
-}
-
-.search-bar {
-  border: none;
-  background: transparent;
-  font-size: 1rem;
-}
-
-.navbar {
-  border-bottom: 1px solid #e5e5e5;
-}
-
 main {
   padding: 2rem;
 }
@@ -122,11 +185,6 @@ main {
 .featured {
   max-width: 98%;
   margin: auto;
-}
-
-.fa-search {
-  position: absolute;
-  left: 50%;
 }
 
 .p-relative {
@@ -368,7 +426,17 @@ main {
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
+  nav ul {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  .date {
+    display: none;
+  }
+
   header .btn {
     font-size: 0.9rem;
     padding: 0;
